# my-stocks

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  check_stocks.py  main.py  pyproject.toml  pytest.ini  requirements.txt
examples/: collect_watchlist_data.py  generate_daily_report.py  query_example.py
src/: cli.py  data_fetcher.py  main.py
src/analysis/: market_summary.py
src/config/: __init__.py  watchlist.py
src/database/: connection.py  queries.py
src/krx/: client.py  saver.py
src/models/: __init__.py  daily_price.py  fundamental.py  market_cap.py  short_balance.py  short_selling.py  stock.py  trading_by_investor.py
src/report/: daily_report.py
tests/: conftest.py
tests/unit/: test_daily_report.py  test_data_fetcher.py  test_database_connection.py  test_database_queries.py  test_krx_client.py  test_krx_saver.py
